--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,3 +1,11 @@
+# Scratch notes:
+
+# Workflow summary:
+# fastqc -> custom perl script -> fastqc -> create concatenated Symb. reference genome -> align and exclude Symb. reads ->
+# create de novo ref genome ->  align -> call variants
+
+
+
 # This Snakefile runs the pipeline for processing 2bRAD data from Stephanocoenia intersepta samples,
 # including quality filtering, removal of symbiont reads, alignment to a de novo reference genome, and indel variant calling. 
 
@@ -6,25 +14,27 @@
 ###############################################
 
 # Raw fastq file directory
-rawfq_dir: "/scratch/kcarls36/data/rawfastq"
+rawfq_dir: "/scratch/kcarls36/projects/data/fastq_raw"
 # Raw QC file output directory
-rawqc_dir: "/home/projects/stephanocoenia_FKNMS/results/rawqc"
+rawqc_dir: "/scratch/kcarls36/projects/data/rawqc"
 # Trimmed fastq file directory
-trimfq_dir: "/scratch/kcarls36/data/trimfastq"
+trimfq_dir: "/scratch/kcarls36/projects/data/trimfastq"
 # Trimmed QC file output directory
-trimqc_dir: "/home/projects/stephanocoenia_FKNMS/results/trimmedqc"
+trimqc_dir: "/scratch/kcarls36/projects/data/trimmedqc"
 # Excluded symbiont trimmed fastq directory
-trimfq_noSymb_dir: "/scratch/kcarls36/data/trimmed_noSymb"
+trimfq_noSymb_dir: "/scratch/kcarls36/projects/data/trimfastq/trimmed_noSymb"
 # Aligned symbiont bam directory
-symb_align_dir: "/scratch/kcarls36/data/symb_align/bams"
+symb_align_dir: "/scratch/kcarls36/projects/data/alignments/symb_align"
+# Aligned S. intersepta bam directory
+sint_align_dir: "/scratch/kcarls36/projects/data/alignments/sint_align"
 # Merged unique reads directory
-merge_dir: "/scratch/kcarls36/data/merged_unique"
+merge_dir: "/scratch/kcarls36/projects/data/merged_unique"
 # De novo reference genome directory
-denovo_ref_dir: "/scratch/kcarls36/data/de_novo_ref"
+denovo_ref_dir: "/scratch/kcarls36/projects/data/merged_unique/de_novo_ref"
 # Kraken database directory
-kraken_db: "/scratch/kcarls36/data/kraken_db"
+kraken_db: "/scratch/kcarls36/projects/data/kraken_db"
 # Script directory
-scripts_dir: "/home/bin"
+scripts_dir: "/home/kcarls36/bin"
 # Symbiont genomes
 symbiont_genomes:
  - "/scratch/kcarls36/projects/data/symGenomes/Symbiodinium_microadriacticum_genome.scaffold.fasta"
@@ -32,7 +42,7 @@ symbiont_genomes:
  - "/scratch/kcarls36/projects/data/symGenomes/Cladocopium_goreaui_Genome.Scaffolds.fasta"
  - "/scratch/kcarls36/projects/data/symGenomes/102_symbd_genome_scaffold.fa"
 # Symbiont concatenated reference genome
-reference_symbiont: "/scratch/kcarls36/data/symGenomes/reference_symbiont"
+reference_symbiont: "/scratch/kcarls36/projects/data/symGenomes/reference_symbiont"
 # Number of threads to use
 threads: 8
 
@@ -52,13 +62,18 @@ threads: 8
 # ├── data/
 # │   ├── rawfastq/
 # │   ├── trimfastq/
+# │       └── trimmed_noSymb/
 # │   ├── symGenomes/
 # │       └── reference_symbiont
-# │   ├── symb_align/
-# │       └── bams
-# │   └── trimmed_noSymb/
+# │   ├── alignments/
+# |       └── symb_align/
+# |       └── sint_align/
 # │   └── kraken_db/
 # │   └── merged_unique/
-# │   └── de_novo_ref/
-# └── projects/
-#     └── stephanocoenia_FKNMS/
+# │       └── de_novo_ref/
+# ├── results/
+# │   ├── rawqc/
+# │   └── trimmedqc/
+
+
+
