--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,14 +2,13 @@
 # ------------------------------------------------ #
 # 2bRAD Trim and QC Snakefile
 # Kirsten Carlson
-# Updated 11/2025
+# Updated 1/2026
 # ------------------------------------------------ #
 
 # This Snakefile runs the pipeline for processing 2bRAD data.
 
 # Scripts needed for this pipeline:
 # From https://github.com/z0on/2bRAD_denovo
-#  - 2bRAD_trim_launch_dedup.pl
 #  - trim2bRAD_2barcodes_dedup.pl
 #  - uniquerOne.pl
 #  - mergeUniq.pl
@@ -20,7 +19,6 @@
 # ------------------------------------------------ #
 
 configfile: "../config/config.yaml"
-include: "rules/metadata.smk"
 # PRJNA accession number
 prjna = config["prjna"]
 # Conda environment
@@ -54,328 +52,23 @@ scripts_dir = config["scripts_dir"]
 # Number of threads to use
 threads = config["threads"] 
 quality = config["quality"]
-minlen = config["minlen"]  
+minlen = config["minlen"] 
 
-# Only include download rules if the file already exists
-if os.path.exists("resources/srr_2brad_list.txt"):
-    include: "rules/download.smk"
+# ------------------------------------------------ #
+# LOCA RULE FILES
+# ------------------------------------------------ #
+include: "rules/metadata.smk"
+include: "rules/download.smk"
+include: "rules/trim_qc.smk"
+include: "rules/de_novo_symb_pipeline.smk"
 
-# Get all FASTQ files and extract sample names
-SAMPLES=glob_wildcards(f"{rawfq_dir}/{{sample}}.fastq").sample
+import pandas as pd
+
+# Read SRR list to define final targets
+srr_df = pd.read_csv(f"{config['resource_dir']}/srr_2brad_list.txt", sep="\t", header=None, names=["SRR", "SAMPLEID"])
+SAMPLES = srr_df["SAMPLEID"].tolist()  
 
 # Define final target(s)
 rule all:
     input:
-        f"{trimqc_dir}/multiqc_report.html"
-
-# ------------------------------------------------ #
-# RULES
-# ------------------------------------------------ #
-
-# Initial fastqc on raw reads
-# ------------------------------------------------ 
-rule fastqc_raw:
-    input:
-        f"{rawfq_dir}/{{sample}}.fastq"
-    output:
-        f"{rawqc_dir}/{{sample}}_fastqc.zip",
-        f"{rawqc_dir}/{{sample}}_fastqc.html"
-    shell:
-        "fastqc {input} -o {rawqcq_dir}"
-
-# Multi-QC on raw reads
-# ------------------------------------------------ 
-rule multiqc_raw:
-    input:
-        expand(f"{rawqc_dir}/{{sample}}_fastqc.zip", sample=SAMPLES)
-    output:
-        f"{rawqc_dir}/multiqc_report.html"
-    shell:
-        "multiqc {input} -o {rawqc_dir}"
-
-
-# Trim using custom perl script
-# This step appears to have already been done before uploading to NCBI SRA, so this is just for reference.
-# ------------------------------------------------
-rule trim_dedup:
-    input:
-        f"{rawfq_dir}/{{sample}}.fastq"
-    output:
-        f"{trimfq_dir}/{{sample}}.tr0"
-    params:
-        site= lambda wc: ".{12}CGA.{6}TGC.{12}|.{12}GCA.{6}TCG.{12}",
-        adaptor="AGATC?",
-        sampleID=100,
-        barcode= lambda wc: "[ATGC]{4}"
-    shell:
-        """
-        perl {scripts_dir}/trim2bRAD_2barcodes_dedup.pl \
-        input={input} \
-        site="{params.site}" \
-        adaptor="{params.adaptor}" \
-        sampleID={params.sampleID} \
-        deduplicate=1 \
-        bc="{params.barcode}"
-        """
-
-# Quality filter with cutadapt
-# If you need to run trim2bRAD_2barcodes_dedup.pl, run this rule after that step, changing input to the trimmed output file (.tr0).
-# This step appears to have already been done before uploading to NCBI SRA, so this is just for reference.
-# ------------------------------------------------
-rule quality_filter:
-    input:
-        f"{rawfq_dir}/{{sample}}.fastq"
-    output:
-        f"{trimfq_dir}/{{sample}}.fastq"
-    params:
-        quality=config["quality"],
-        minlen=config["minlen"]
-    shell:
-        """
-        cutadapt -q {params.quality} -m {params.minlen} -o {output} {input}
-        """
-
-# Run fastqc on trimmed reads
-# Above step did not trim or remove any reads, so this is just for reference.
-# ------------------------------------------------
-rule fastqc_trimmed:
-    input:
-        f"{trimfq_dir}/{{sample}}.fastq"
-    output:
-        f"{trimqc_dir}/{{sample}}_fastqc.zip",
-        f"{trimqc_dir}/{{sample}}_fastqc.html"
-    shell:
-        "fastqc {input} -o {trimqc_dir}"
-
-# Multi-QC on trimmed reads
-# Above step did not trim or remove any reads, so this is just for reference.
-# ------------------------------------------------
-rule multiqc_trimmed:   
-    input:
-        expand(f"{trimqc_dir}/{{sample}}_fastqc.zip", sample=SAMPLES)
-    output:
-        f"{trimqc_dir}/multiqc_report.html"
-    shell:
-        "multiqc {trimqc_dir} -o {trimqc_dir}"
-
-# Create concatenated symbiont reference genome from individual symbiont genomes
-# ------------------------------------------------ 
-rule create_symb_reference:
-    input:
-        config["symbiont_genomes"]
-    output:
-        f"{config["reference_symbiont"]}.fasta"
-    shell:
-        """
-        cat {input} > {output}
-        """
-
-# Build bowtie2 index for symbiont reference genome
-# ------------------------------------------------ 
-rule index_symbiont_reference:
-    input:
-        fasta=f"{config['reference_symbiont']}.fasta"
-    output:
-        f"{config['reference_symbiont']}.1.bt2",
-        f"{config['reference_symbiont']}.2.bt2",
-        f"{config['reference_symbiont']}.3.bt2",
-        f"{config['reference_symbiont']}.4.bt2",
-        f"{config['reference_symbiont']}.rev.1.bt2",
-        f"{config['reference_symbiont']}.rev.2.bt2"
-    threads: 4
-    resources:
-        mem_mb=32000
-    params:
-        basename=config['reference_symbiont']
-    conda:
-        config["env"]
-    shell:
-        """
-        bowtie2-build --threads {threads}{input.fasta} {params.basename}
-        """
-
-
-# Align reads to symbiont reference genome
-# ------------------------------------------------ 
-rule map_symbiont:
-    input:
-        fq = f"{trimfq_dir}/{{sample}}.fastq",
-        index_prefix = config["reference_symbiont"]
-    output:
-        sam = f"{symb_align_dir}/{{sample}}_symb.sam",
-        aligned = f"{symb_align_dir}/{{sample}}_symb.fastq",
-        unaligned = f"{trimfq_noSymb_dir}/{{sample}}.fastq"
-    threads: 4
-    resources:
-        mem_mb = 16000
-    shell:
-        """
-        bowtie2 \
-          --score-min L,16,1 --local -L 16 \
-          -x {input.index_prefix} \
-            -U {input.fq} \
-            --no-unal \
-            --al {output.aligned} \
-            --un {output.unaligned} \
-            -S {output.sam} \
-            -p {threads}
-        """
-
-# Exclude reads that align to symbiont genomes
-# ------------------------------------------------ 
-rule exclude_symbiont_reads:
-    input:
-        fq = f"{trimfq_dir}/{{sample}}.fastq",
-        symb_bam = f"{symb_align_dir}/{{sample}}_symb.bam"
-    output:
-        f"{trimfq_noSymb_dir}/{{sample}}.fastq"
-    shell:
-        """
-        samtools view -b -f 4 {input.symb_bam} | \
-        samtools fastq - > {output}
-        """
-
-# Uniquing reads
-# ------------------------------------------------ 
-rule unique_reads:
-    input:
-        f"{trimfq_noSymb_dir}/{{sample}}.fastq"
-    output:
-       f"{merge_dir}/{{sample}}.uni"
-    threads: config["threads"]
-    shell:
-        """
-        perl {scripts_dir}/uniquerOne.pl {input} > {output}
-        """
-
-# Merge unique reads
-# ------------------------------------------------ 
-rule merge_unique_reads:
-    input:
-        expand(f"{merge_dir}/{{sample}}.uni", sample=SAMPLES)
-    output:
-        f"{merge_dir}/all.uniq"
-    params:
-        minInd = 30
-    shell:
-        """
-        perl {scripts_dir}/mergeUniq.pl {input} minInd={params.minInd}  > {output}
-        """
-
-# Filter tags based on quality and count
-# ------------------------------------------------ 
-rule filter_tags:
-    input:
-        f"{merge_dir}/all.uniq"
-    output:
-        f"{merge_dir}/all.tab"
-    shell:
-        """
-        awk '!($3>7 && $4==0) && $2!="seq"' {input} > {output}
-        """
-
-# Convert filtered tags to fasta format
-# ------------------------------------------------ 
-rule tab_to_fasta:
-    input:
-        f"{merge_dir}/all.tab"
-    output:
-        f"{merge_dir}/all.fasta"
-    shell:
-        """
-        awk '{{print ">"$1"\\n"$2}}' {input} > {output}
-        """
-
-# Cluster filtered tags with CD-HIT
-# ------------------------------------------------ 
-rule cluster_tags: 
-    input:
-        f"{merge_dir}/all.fasta"
-    output:
-        f"{merge_dir}/cdh_alltags.fas"
-    params:
-        identity = 0.91,
-        mem_mb = 12000
-    shell:
-        """
-        cd-hit-est -i {input} -o {output} -c {params.identity} -aL 1 -aS 1 -g 1 -T 0 -M 0
-        """
-
-# Remove contamination with Kraken2 standard database
-# ------------------------------------------------ 
-rule kraken2_filter:
-    input:
-        f"{merge_dir}/cdh_alltags.fas"
-    output:
-        f"{merge_dir}/cdh_alltags.unclass.fa"
-    params:
-        kraken_db_std = config["kraken_db_std"],
-        mem_mb = 50000
-    shell:
-        """
-        kraken2 --db {params.kraken_db_std} --output /dev/null --report {merge_dir}/kraken_report.txt --unclassified-out {output} {input}
-        """
-    
-# Copy and rename unclassified cdh tags as de novo reference genome
-# ------------------------------------------------ 
-rule copy_denovo_ref:
-    input:
-        f"{merge_dir}/cdh_alltags.unclass.fa"
-    output:
-        f"{denovo_ref_dir}/sint_denovo.fa"
-    shell:
-        """
-        cp {input} {output}
-        """
-
-# Construct de novo refernece with 30 psuedo chromosomes
-# ------------------------------------------------ 
-rule construct_denovo_ref:
-    input:
-        f"{denovo_ref_dir}/sint_denovo.fa"
-    output:
-        fasta = f"{denovo_ref_dir}/sint_denovo_cc.fa",
-        tab = f"{denovo_ref_dir}/sint_denovo_cc.tab"
-    params:
-        num_chr = 30,
-        script = f"{scripts_dir}/concatFasta.pl"
-    shell:
-        """
-        perl {params.script} fasta={input} num_chr={params.num_chr}
-        """
-
-# Format and index de novo reference genome with bwa and samtools
-# ------------------------------------------------ 
-rule index_denovo_ref:
-    input:
-        f"{denovo_ref_dir}/sint_denovo_cc.fa"
-    output:
-        touch(f"{denovo_ref_dir}/sint_denovo_cc.fa.bwt")
-    params:
-        mem_mb = 16000
-    shell:
-        """
-        bwa index {input}
-        samtools faidx {input}
-        touch {output}
-        """
-        
-# Final cleanup of de novo reference intermediate files
-# ------------------------------------------------ 
-rule cleanup_denovo_intermediate:   
-    input:
-        fasta = f"{denovo_ref_dir}/sint_denovo_cc.fa",
-        tab = f"{denovo_ref_dir}/sint_denovo_cc.tab",
-        fq = f"{merge_dir}/cdh_alltags.fas"
-    output:
-        touch(f"{denovo_ref_dir}/cleanup.done")
-    shell:
-        """
-        rm {merge_dir}/*.uni
-        rm {input.fq}
-        rm {merge_dir}/all.uniq
-        rm {merge_dir}/all.tab
-        rm {merge_dir}/all.fasta
-        rm {input.tab}
-        touch {output}
-     """
+        expand(f"{denovo_ref_dir}/cleanup.done", sample=SAMPLES)
