--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,3 @@
-# Scratch notes:
-
-# Workflow summary:
-# fastqc -> custom perl script -> fastqc -> create concatenated Symb. reference genome -> align and exclude Symb. reads ->
-# create de novo ref genome ->  align -> call variants
-
-
-
-# This Snakefile runs the pipeline for processing 2bRAD data from Stephanocoenia intersepta samples,
-# including quality filtering, removal of symbiont reads, alignment to a de novo reference genome, and indel variant calling. 
-
 ###############################################
 # CONFIG FILE
 ###############################################
@@ -16,7 +5,7 @@
 # Project PRJNA number
 prjna: "PRJNA884416"
 # Conda environment
-env: "/home/kcarls36/.conda/envs/bowtie2.yaml"
+env: "/home/kcarls36/.conda/envs/env.yaml"
 # List of 2bRAD srr numbers and sample IDs
 srr_2brad_list: "/home/kcarls36/projects/stephanocoenia_FKNMS/resources/srr_2brad_list.txt"
 # List of ITS2 srr numbers and sample IDs
